--- a/css/style.css
+++ b/css/style.css
@@ -909,43 +909,7 @@ h3.my-profession
     {
         display: none;
     }
-        .home .home-img img
-{
-    
-    margin:auto;
-    height: 500px;
-     position: relative;
-    transform: translate(1%, 10%);
-    top: -100px;
-    right: 40px;
-    animation: animateUser 4s linear infinite;
-}
-@keyframes animateUser{
-    50%{
-        right: 30px;
-        top: -90px;
-    }
-}
-
-.home .home-img #splash
-{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%) rotate(-360deg);
-    height: 110%;
-    filter: saturate(200%);
-    animation: animate 4s linear infinite;
-}
-
-@keyframes animate{
-    50%{
-        left: 49%;
-        top: 51%;
-        width: -155%;
-       
-    }
-}
+      
 }
 
 @media (max-width:767px)
@@ -962,6 +926,31 @@ h3.my-profession
         flex: 0 0 100%;
         max-width: 100%;
     }
+  
+}
+@media (max-width:465px)
+{
+    .contact .contact-form .col-6,
+    .contact .contact-info-item,
+    .portfolio .portfolio-item,
+    .service .service-item,
+    .about .about-content .experience,
+    .about .about-content .education,
+    .about .about-content .skills,
+    .about .about-content .personal-info
+    {
+        flex: 0 0 100%;
+        max-width: 100%;
+
+    }
+    .portfolio .portfolio-item
+{
+    max-height: 110%;
+    max-width: 100%;
+    margin-bottom: 30px;
+    text-align: center;
+    font-size: 20px;
+}
   
 }
 /* ========================== RESPONSIVE END ================================ */
